# Visual-docking-station

./: CMakeLists.txt  README.md  setup.sh
config/: aruco_params.yaml
docs/: presentation.tex  presentation_outline.md  walkthrough.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/visual_docking/lib/visual_docking/: aruco_detector_node.py  dock_controller.py  generate_aruco_marker.py
install/visual_docking/share/visual_docking/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/visual_docking/share/visual_docking/cmake/: visual_dockingConfig-version.cmake  visual_dockingConfig.cmake
install/visual_docking/share/visual_docking/config/: aruco_params.yaml
install/visual_docking/share/visual_docking/environment/: ament_prefix_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/visual_docking/share/visual_docking/launch/: docking_simulation.launch.py
install/visual_docking/share/visual_docking/models/aruco_marker/: model.config  (+1 more)
install/visual_docking/share/visual_docking/urdf/: docking_robot.urdf.xacro
install/visual_docking/share/visual_docking/worlds/: room_world.sdf
launch/: docking_simulation.launch.py
log/: latest_build
scripts/: aruco_detector_node.py  dock_controller.py  generate_aruco_marker.py
scripts/models/aruco_marker/: model.config  model.sdf
scripts/models/docking_robot/: model.config  model.sdf
urdf/: docking_robot.urdf.xacro
worlds/: room_world.sdf
worlds/visual_docking/: __init__.py
(+4 files in other folders)
